--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^9.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "fluent-ffmpeg": "^2.1.2",
     "mongoose": "^6.0.10",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -36,6 +37,7 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
+    "@types/fluent-ffmpeg": "^2.1.18",
     "@types/jest": "^27.0.1",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.10.3",
